<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.android.aviro.presentation.Home.ui.mypage.MypageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.android.aviro.presentation.Home.ui.map.Map"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.android.aviro.presentation.Home.ui.register.RegisterFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_guide_register" />
</navigation>