<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MapFragment">

    <fragment
        android:id="@+id/MapFragment"
        android:name="com.android.aviro.presentation.home.ui.map.Map"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">
<!--        <action-->
<!--            android:id="@+id/action_MapFragment_to_MypageFragment"-->
<!--            app:destination="@id/MypageFragment" />-->
    </fragment>

    <fragment
        android:id="@+id/MypageFragment"
        android:name="com.android.aviro.presentation.home.ui.mypage.MypageFragment"
        android:label="@string/mypage_fragment_label"
        tools:layout="@layout/fragment_mypage">

       <!-- <action
            android:id="@+id/action_MypageFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.android.aviro.presentation.home.ui.register.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <!--<action
            android:id="@+id/action_RegisterFragment_to_MapFragment"
            app:destination="@id/MapFragment" />-->
    </fragment>
</navigation>