<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.core.content.ContextCompat"/>
        <variable
            name="viewmodel"
            type="com.android.aviro.presentation.sign.SignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_left"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="29.53dp">
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/mainTextView"
            android:layout_width="145dp"
            android:layout_height="74dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="이용약관에\n동의해주세요!"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/Cobalt"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/subTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="정책 및 약관을 클릭해 모든 내용을 확인해주세요."
            android:textColor="@color/Gray1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTextView"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:textColor = "@color/Gray3"
                android:background = "@drawable/base_edittext_roundsquare_default">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/approveBtnAll"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:orientation="horizontal"
                        android:background= "@{viewmodel.isAllTrue}"
                        android:onClick="@{() -> viewmodel.onClickApprove(approveBtnAll)}">
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:fontFamily="@font/pretendard_semibold"
                        android:text="전체 동의" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:id="@+id/approveBtn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@{viewmodel.isApproveList[0]}"
                        android:onClick="@{() -> viewmodel.onClickApprove(approveBtn1)}"
                        android:orientation="horizontal">
                    </LinearLayout>

                    <TextView
                        android:id="@+id/terms1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/pretendard_medium"
                        android:onClick="@{() -> viewmodel.onLinkClick(terms1)}"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/terms1"
                        android:textColor="@color/Gray0"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/approveBtn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@{viewmodel.isApproveList[1]}"
                        android:onClick="@{() -> viewmodel.onClickApprove(approveBtn2)}">
                    </LinearLayout>
                    <TextView
                        android:id = "@+id/terms2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="14sp"
                        android:onClick="@{() -> viewmodel.onLinkClick(terms2)}"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/Gray0"
                        android:text="@string/terms2" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:id="@+id/approveBtn3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@{viewmodel.isApproveList[2]}"
                        android:onClick="@{() -> viewmodel.onClickApprove(approveBtn3)}">
                    </LinearLayout>
                    <TextView
                        android:id = "@+id/terms3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textSize="14sp"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:onClick="@{() -> viewmodel.onLinkClick(terms3)}"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/Gray0"
                        android:text="@string/terms3" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <!--가입버튼-->
        <LinearLayout
            android:id = "@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:enabled="@{viewmodel.isAllTrue}"
            android:background = "@{viewmodel.isAllTrue}"
            android:onClick = "@{() -> viewmodel.onClickSignUp()}"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>